<?xml version="1.0" encoding="utf-8"?>

<!-- Data binding added -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Scroll View Added for screen size overflow -->
    <ScrollView
        android:id="@+id/container_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".instruction.InstructionFragment">

        <!-- Constraint Layout is holding the instruction page -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- App Logo Added -->
            <TextView
                android:id="@+id/brand_logo_text"
                style="@style/style_default_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_book_store"
                app:drawableTopCompat="@drawable/ic_baseline_menu_book_200"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Instruction paragraphs container -->
            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/brand_logo_text">

                <!-- Instruction para 1 -->
                <TextView
                    android:id="@+id/para_1"
                    style="@style/style_para"
                    android:text="@string/instruction_para1" />

                <!-- Instruction para 2 -->
                <TextView
                    android:id="@+id/para_2"
                    style="@style/style_para"
                    android:text="@string/instruction_para2" />

                <!-- Instruction para 3 -->
                <TextView
                    android:id="@+id/para_3"
                    style="@style/style_para"
                    android:text="@string/instruction_para3" />

                <!-- Instruction para 4 -->
                <TextView
                    android:id="@+id/para_4"
                    style="@style/style_para"
                    android:text="@string/instruction_para4" />

                <!-- Instruction para 5 -->
                <TextView
                    android:id="@+id/para_5"
                    style="@style/style_para"
                    android:text="@string/instruction_para5" />

                <!-- Mark as read button -->
                <Button
                    android:id="@+id/mark_as_read_button"
                    style="@style/style_dark_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_mark_as_read" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
